k8s/dev/ingress-service-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-${NAMESPACE}-ingress
spec:
  rules:
    - host: ${NAMESPACE}.to-do.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /users/
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: taskview-service
                port:
                  number: 80
